# Embedded-Rust-with-PicSimLab

./: .gdb_history  Cargo.toml  README.md  bluepill_workspace.pzw  memory.x  periph_configuration.pcf  run_me.sh
.cargo/: config.toml
src/: main.rs
