[package]
name = "bluepill"
version = "0.1.0"
authors = ["David Cabanis <david.cabanis@gmail.com>"]
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
nb = "1.1.0"
panic-halt = "0.2.0"
embedded-hal = "1.0.0"

[dependencies.stm32f1xx-hal]
version = "0.10.0"
features = ["stm32f103", "rt"]

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "z"
